Version 0.19
  o The internal DDI structure is now defined as an updateable cache

Version 0.18
  o bug fix converting to Excel
  o bug fix in globalAttributes() checking for optional and recommended
  o bug fix in updateCodebook() properly detecting the "xml:lang" attribute
  o variable IDs are preserved if found, when converting to DDI

Version 0.17
  o added pre-final DDI Codebook 2.6 elements
  o major upgrade, a whole series of new functions
  o refactored function exportDDI()
  o removed arguments "declared", "save" and "OS" from function getMetadata()
  o new argument "ignore" added to function getMetadata()
  o make_labelled() renamed to makeLabelled() for a consistent namespace

Version 0.16
  o maintenance work to comply with the CRAN related issues generated by the
    new behavior of the base function is.atomic()

Version 0.15
  o exporting to SAS .xpt files uses a default version 5, since the haven
    default version 8 does not seem to work
  o tagged NAs no longer automatically deactivate the argument "declared" in
    function convert()
  o refactored and improved function recodeMissings()
  o reached half of the functions with full coverage

Version 0.14
  o package documentation system converted to roxygen2
  o argument "codebook" renamed to "obj" in function setupfile()
  o when a path to a single file is provided, setupfile() outputs in the same
    directory, otherwise in the current working directory
  o improved, corrected and finally tested setup file for SAS
  o the "<notes>" element in the DDI XML file is now augmented with two
    attributes "level" and "subject" to differentiate it from other possible
    "<notes>" elements and make it obvious this one contains the CSV dataset

Version 0.13
  o new argument "stringnum" in function setupfile()
  o the R data frame gains a new attribute "stdyDscr" when importing from DDI
  o bug fix importing from DDI with external .csv file
  o function convert() now recognizes ".zsav" as SPSS input file